# t81-python

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  STATUS.md  ecosystem.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml  vm-bridge-nightly.yml
benchmarks/: benchmark_export.py
contracts/: runtime-contract.json
docs/: api.md  architecture.md  artifact-spec.md  benchmarks.md  compatibility.md  contracts.md  releasing.md
examples/: export_hf_json.sh  hf_quantize_example.py  hf_state_dict.json  llama_cpp_config_example.py
schemas/: ecosystem.schema.json
scripts/: benchmark-smoke.sh  build.sh  check-vm-contract.py  check.sh  release-check.sh  run_vm_canary.py  sync-docs.sh  test.sh  validate-ecosystem-json.py
src/t81_python/: __init__.py  cli.py  core.py  quantization.py  vm_bridge.py
src/t81_python/integrations/: __init__.py  huggingface.py  llama_cpp.py
src/t81_python/pipelines/: __init__.py  hf_export.py
tests/: test_cli_integration.py  test_integrations.py  test_pipeline_hf_export.py  test_quantization.py  test_vm_bridge.py
