[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t81-python"
version = "0.1.0"
description = "Typed Python APIs for balanced ternary workflows and model integrations"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "t81dev" }
]
keywords = ["balanced-ternary", "quantization", "llm", "llama-cpp", "huggingface"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Developers",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
hf = [
  "torch>=2.1",
  "transformers>=4.40",
  "safetensors>=0.4",
]
llama = [
  "llama-cpp-python>=0.2.90",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.5",
  "build>=1.0",
  "jsonschema>=4.23",
]

[project.urls]
Homepage = "https://github.com/t81dev/t81-python"
Repository = "https://github.com/t81dev/t81-python"

[project.scripts]
t81-python = "t81_python.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["torch", "torch.*", "pytest", "_pytest.*", "safetensors", "safetensors.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
